[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "YoloOnnxDet"
version = "0.0.1"
authors = [
    { name = "zaixia108", email = "xvbowen2012@gmail.com" }
]
description = "A Python package for mouse path control and training."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
    "numpy"
]
urls = { homepage = "https://github.com/zaixia108/PyOnnxDetDll" }

[tool.setuptools.package-data]
YoloOnnxDet = ["*.dll"]